--- a/www/views/app-tabs.html
+++ b/www/views/app-tabs.html
@@ -9,16 +9,20 @@
         <ion-nav-view name="tab-companies"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="Favorites" icon-off="ion-ios-star-outline" icon-on="ion-ios-star-outline" ui-sref="app.tabs.favorites">
+    <ion-tab title="Favorites" icon-off="ion-ios-star" icon-on="ion-ios-star" ui-sref="app.tabs.favorites">
         <ion-nav-view name="tab-favorites"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="Events" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar-outline" ui-sref="app.tabs.events">
+    <ion-tab title="Events" icon-off="ion-ios-calendar" icon-on="ion-ios-calendar" ui-sref="app.tabs.events">
         <ion-nav-view name="tab-events"></ion-nav-view>
     </ion-tab>
 
     <ion-tab title="Scanner" icon-off="ion-qr-scanner" icon-on="ion-qr-scanner" ui-sref="app.tabs.scanner">
         <ion-nav-view name="tab-scanner"></ion-nav-view>
+    </ion-tab>
+
+    <ion-tab title="Videos" icon-off="ion-ios-videocam" icon-on="ion-ios-videocam" ui-sref="app.tabs.videos">
+        <ion-nav-view name="tab-videos"></ion-nav-view>
     </ion-tab>
 
 </ion-tabs>
